[gd_scene load_steps=4 format=3 uid="uid://d4i8j9k0l5m6n7"]

[ext_resource type="Script" path="res://scripts/ui/character_details_panel.gd" id="1_details"]
[ext_resource type="Theme" path="res://themes/game_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_portrait"]
bg_color = Color(0.15, 0.15, 0.15, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_left_top = 16
corner_radius_right_top = 16
corner_radius_right_bottom = 16
corner_radius_left_bottom = 16

[node name="CharacterDetailsPanel" type="Control"]
theme = ExtResource("2_theme")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_details")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 12

[node name="ThreeColumnLayout" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 48

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/ThreeColumnLayout"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="PortraitPanel" type="Panel" parent="MarginContainer/ThreeColumnLayout/LeftColumn"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_portrait")

[node name="PortraitTexture" type="TextureRect" parent="MarginContainer/ThreeColumnLayout/LeftColumn/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CharacterNameLabel" type="Label" parent="MarginContainer/ThreeColumnLayout/LeftColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Character Name"
horizontal_alignment = 1

[node name="CharacterTypeLabel" type="Label" parent="MarginContainer/ThreeColumnLayout/LeftColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Scavenger â€¢ Level 1"
horizontal_alignment = 1

[node name="AuraSeparator" type="HSeparator" parent="MarginContainer/ThreeColumnLayout/LeftColumn"]
layout_mode = 2

[node name="AuraName" type="Label" parent="MarginContainer/ThreeColumnLayout/LeftColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Collection Aura"
horizontal_alignment = 1

[node name="AuraDescription" type="Label" parent="MarginContainer/ThreeColumnLayout/LeftColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Auto-collects nearby items"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CenterColumn" type="VBoxContainer" parent="MarginContainer/ThreeColumnLayout"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="StatsTitle" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "PRIMARY STATS"

[node name="StatsList" type="VBoxContainer" parent="MarginContainer/ThreeColumnLayout/CenterColumn"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HPRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList"]
layout_mode = 2

[node name="HPName" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList/HPRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Max HP"

[node name="HPValue" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList/HPRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "100"
horizontal_alignment = 2

[node name="DamageRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList"]
layout_mode = 2

[node name="DamageName" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList/DamageRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Damage"

[node name="DamageValue" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList/DamageRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "10"
horizontal_alignment = 2

[node name="ArmorRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList"]
layout_mode = 2

[node name="ArmorName" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList/ArmorRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Armor"

[node name="ArmorValue" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList/ArmorRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 2

[node name="SpeedRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList"]
layout_mode = 2

[node name="SpeedName" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList/SpeedRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "% Speed"

[node name="SpeedValue" type="Label" parent="MarginContainer/ThreeColumnLayout/CenterColumn/StatsList/SpeedRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 2

[node name="RightColumn" type="VBoxContainer" parent="MarginContainer/ThreeColumnLayout"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="RecordsTitle" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "RECORDS"

[node name="RecordsList" type="VBoxContainer" parent="MarginContainer/ThreeColumnLayout/RightColumn"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="KillsRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList"]
layout_mode = 2

[node name="KillsName" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList/KillsRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Total Kills"

[node name="KillsValue" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList/KillsRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 2

[node name="WaveRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList"]
layout_mode = 2

[node name="WaveName" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList/WaveRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Highest Wave"

[node name="WaveValue" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList/WaveRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 2

[node name="DeathsRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList"]
layout_mode = 2

[node name="DeathsName" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList/DeathsRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Deaths"

[node name="DeathsValue" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/RecordsList/DeathsRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 2

[node name="CurrencySeparator" type="HSeparator" parent="MarginContainer/ThreeColumnLayout/RightColumn"]
layout_mode = 2

[node name="CurrencyTitle" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "CURRENCY"

[node name="CurrencyList" type="VBoxContainer" parent="MarginContainer/ThreeColumnLayout/RightColumn"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScrapRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList"]
layout_mode = 2

[node name="ScrapName" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList/ScrapRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Scrap"

[node name="ScrapValue" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList/ScrapRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(0.918, 0.773, 0.239, 1)
text = "0"
horizontal_alignment = 2

[node name="NanitesRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList"]
layout_mode = 2

[node name="NanitesName" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList/NanitesRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Nanites"

[node name="NanitesValue" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList/NanitesRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(0.302, 0.58, 1, 1)
text = "0"
horizontal_alignment = 2

[node name="ComponentsRow" type="HBoxContainer" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList"]
layout_mode = 2

[node name="ComponentsName" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList/ComponentsRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Components"

[node name="ComponentsValue" type="Label" parent="MarginContainer/ThreeColumnLayout/RightColumn/CurrencyList/ComponentsRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "0"
horizontal_alignment = 2
